# Tag

./: .gitmodules  README.md  jitpack.yml  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/kyant/tagapp/: MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts  consumer-rules.pro
lib/src/main/cpp/: CMakeLists.txt  fd.h  lyrics.h  picture.h  save_lyrics.h  tag.cpp
lib/src/main/java/com/kyant/tag/: AudioProperties.kt  Metadata.kt  Tag.kt  Tags.kt
